fix: set cache invalidation to 1h, add user and password to connect to redis

--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,4 @@
-# Configuração do Redis
 REDIS_HOST=localhost
 REDIS_PORT=6379
+REDIS_USERNAME=your_user_not_needed_for_local_development
+REDIS_PASSWORD=your_password_not_needed_for_local_development
