feature: transforme code into a discord bot

--- a/.env-example
+++ b/.env-example
@@ -2,3 +2,4 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_USERNAME=your_user_not_needed_for_local_development
 REDIS_PASSWORD=your_password_not_needed_for_local_development
+DISCORD_TOKEN=your_discord_bot_token
