--- a/.env-example
+++ b/.env-example
@@ -5,3 +5,4 @@ REDIS_PASSWORD=your_password_not_needed_for_local_development
 DISCORD_TOKEN=your_discord_bot_token
 CHESS_COM_BASE_URL = https://api.chess.com
 FLEXZIN_NICKNAME = FIexPrime
+MONTHS_QUANTITY_TO_GET_GAMES_FROM = 6
