--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,7 @@
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_USERNAME=your_user_not_needed_for_local_development
-REDIS_PASSWORD=your_password_not_needed_for_local_development
+REDIS_USERNAME=
+REDIS_PASSWORD=
 DISCORD_TOKEN=your_discord_bot_token
 CHESS_COM_BASE_URL = https://api.chess.com
 FLEXZIN_NICKNAME = FIexPrime
